--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,13 @@
 body {
   background-color: black;
 }
+.menu_bar {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding: 40px;
+  font-size: 25px;
+}
 
 .menu_bar_entry {
   color: white;
