--- a/styles/main.css
+++ b/styles/main.css
@@ -1,35 +1,28 @@
 body {
-  margin: 0;
   background-color: black;
 }
 
-#navbar{
- position:relative;
- width:100px;
- height:auto;
-}
-
-#navbar ul { 
-    margin: 0; 
-    padding: 5px; 
-    cellspacing: 0;
-    cellpadding: 0;
-    border: 0;
-    list-style-type: none; 
-} 
-
-#navbar ul li {
-    display: inline; 
+.menu_bar {
+  overflow: hidden;
 }
 
 .menu_bar_entry {
-  text-decoration: none; 
-    padding: .2em 1em; 
+  float: left;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+  
   color: white;
   background-color: black;
 }
 
 .menu_bar_entry:hover {
+  color: black;
+  background-color: white;
+}
+
+.menu_bar_entry_active {
   color: black;
   background-color: white;
 }
