--- a/styles/main.css
+++ b/styles/main.css
@@ -1,29 +1,28 @@
 body {
   margin: 0;
-  background-color: black;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-.menu_bar {
+.topnav {
   overflow: hidden;
+  background-color: #333;
 }
 
-.menu_bar_entry {
+.topnav a {
   float: left;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
   font-size: 17px;
-  
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #04AA6D;
   color: white;
-  background-color: black;
-}
-
-.menu_bar_entry:hover {
-  color: black;
-  background-color: white;
-}
-
-.menu_bar_entry_active {
-  color: black;
-  background-color: white;
 }
